syntax = "proto2";
option java_multiple_files = true;
package org.redstone.protobuf.msg;

message JoinRoomRequest
{
  optional string deviceUID = 1;
  optional int32 roomId = 2;
}
